routes and views !

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,20 @@
   "aboutLinkTarget": "/about",
   "registerLinkName": "Register",
   "registerLinkTarget": "/register",
+  "servicesLinkName": "Services",
+  "servicesLinkTarget": "/services",
+  "actorsLinkName": "Actors",
+  "actorsLinkTarget": "/actors",
+  "ordersLinkName": "Orders",
+  "ordersLinkTarget": "/orders",
+  "paymentsLinkName": "Payments",
+  "paymentsLinkTarget": "/payments",
+  "invoicesLinkName": "Invoices",
+  "invoicesLinkTarget": "/invoices",
+  "exportLinkName": "Export",
+  "exportLinkTarget": "/export",
+  "profileLinkName": "Profile",
+  "profileLinkTarget": "/profile",
   "flagsDropdownHead1": "Default",
   "flagsDropdownHead2": "Countries and languages",
   "countryLabel1": "France (French)",
