--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,6 +11,20 @@
   "aboutLinkTarget": "/a-propos",
   "registerLinkName": "Inscription",
   "registerLinkTarget": "/inscription",
+  "servicesLinkName": "Services",
+  "servicesLinkTarget": "/services",
+  "actorsLinkName": "Acteurs",
+  "actorsLinkTarget": "/acteurs",
+  "ordersLinkName": "Commandes",
+  "ordersLinkTarget": "/commandes",
+  "paymentsLinkName": "Paiements",
+  "paymentsLinkTarget": "/paiements",
+  "invoicesLinkName": "Factures",
+  "invoicesLinkTarget": "/factures",
+  "exportLinkName": "Exportation",
+  "exportLinkTarget": "/exportation",
+  "profileLinkName": "Profil",
+  "profileLinkTarget": "/profil",
   "flagsDropdownHead1": "Défaut",
   "flagsDropdownHead2": "Pays et langues",
   "countryLabel1": "France (Français)",
